modified:   chapter/chap2.tex 	modified:   chapter/chap4.tex 	modified:   notes_template.aux 	modified:   notes_template.fdb_latexmk 	modified:   notes_template.fls 	modified:   notes_template.ist 	modified:   notes_template.loe 	modified:   notes_template.log 	modified:   notes_template.maf 	modified:   notes_template.mtc2 	modified:   notes_template.mtc3 	modified:   notes_template.out 	modified:   notes_template.pdf 	modified:   notes_template.synctex.gz 	modified:   notes_template.tex 	modified:   notes_template.toc 	modified:   original paper/DiamondGaubert.pdf

--- a/notes_template.tex
+++ b/notes_template.tex
@@ -64,6 +64,7 @@
 \declaretheorem[numberwithin=chapter]{proposition}
 \declaretheorem[numberwithin=chapter]{claim}
 \declaretheorem[numberwithin=chapter]{conjecture}
+\declaretheorem[numberwithin=chapter]{assumption}
 \declaretheorem[sibling=theorem]{corollary}
 \declaretheorem[numberwithin=chapter, style=definition]{definition}
 \declaretheorem[numberwithin=chapter, style=definition]{problem}
@@ -231,9 +232,10 @@ delim_0 "\\nobreak\\dotfill"
 \input{chapter/chap1.tex}
 % \includepdf[pages=-]{homework/IOE516_HW1_Solutions.pdf}
 
+\input{chapter/chap2.tex}
 % Now we start to lecture 12
 
-
+\input{chapter/chap4.tex}
 % \begin{appendices}
 % \input{./chapter/appendix_formula.tex}
 
