modified:   chapter/chap3.tex 	modified:   notes_template.aux 	modified:   notes_template.fdb_latexmk 	modified:   notes_template.fls 	modified:   notes_template.loe 	modified:   notes_template.log 	modified:   notes_template.maf 	modified:   notes_template.mtc3 	modified:   notes_template.mtc4 	modified:   notes_template.out 	modified:   notes_template.pdf 	modified:   notes_template.synctex.gz 	modified:   notes_template.tex 	modified:   notes_template.toc

--- a/notes_template.tex
+++ b/notes_template.tex
@@ -235,6 +235,8 @@ delim_0 "\\nobreak\\dotfill"
 \input{chapter/chap2.tex}
 % Now we start to lecture 12
 
+\input{chapter/chap3.tex}
+
 \input{chapter/chap4.tex}
 % \begin{appendices}
 % \input{./chapter/appendix_formula.tex}
