modified:   chapter/chap5.tex 	modified:   notes_template.aux 	modified:   notes_template.blg 	modified:   notes_template.fdb_latexmk 	modified:   notes_template.fls 	modified:   notes_template.ist 	modified:   notes_template.log 	modified:   notes_template.maf 	modified:   notes_template.mtc5 	modified:   notes_template.out 	modified:   notes_template.pdf 	modified:   notes_template.synctex.gz 	modified:   notes_template.tex 	modified:   notes_template.toc 	modified:   original paper/desmet-rossi-hansberg-2013-urban-accounting-and-welfare.pdf

--- a/notes_template.tex
+++ b/notes_template.tex
@@ -238,6 +238,8 @@ delim_0 "\\nobreak\\dotfill"
 \input{chapter/chap3.tex}
 
 \input{chapter/chap4.tex}
+
+\input{chapter/chap5.tex}
 % \begin{appendices}
 % \input{./chapter/appendix_formula.tex}
 
