--- a/notes_template.tex
+++ b/notes_template.tex
@@ -240,6 +240,8 @@ delim_0 "\\nobreak\\dotfill"
 \input{chapter/chap4.tex}
 
 \input{chapter/chap5.tex}
+
+\input{chapter/chap6.tex}
 % \begin{appendices}
 % \input{./chapter/appendix_formula.tex}
 
