modified:   chapter/chap7.tex 	modified:   notes_template.aux 	modified:   notes_template.fdb_latexmk 	modified:   notes_template.fls 	modified:   notes_template.log 	modified:   notes_template.maf 	modified:   notes_template.mtc7 	modified:   notes_template.out 	modified:   notes_template.pdf 	modified:   notes_template.synctex.gz 	modified:   notes_template.tex 	modified:   notes_template.toc 	modified:   original paper/1-s2.0-S0094119020300681-main.pdf 	renamed:    original paper/1-s2.0-016604629502098F-main.pdf -> original paper/read/W h e n is the economy monocentric.pdf

--- a/notes_template.tex
+++ b/notes_template.tex
@@ -242,6 +242,8 @@ delim_0 "\\nobreak\\dotfill"
 \input{chapter/chap5.tex}
 
 \input{chapter/chap6.tex}
+
+\input{chapter/chap7.tex}
 % \begin{appendices}
 % \input{./chapter/appendix_formula.tex}
 
