--- a/notes_template.tex
+++ b/notes_template.tex
@@ -229,6 +229,10 @@ delim_0 "\\nobreak\\dotfill"
 % \mainmatter % separat the number of toc and mainmatter
 \part{urban economics}
 
+\input{chapter/chap-1.tex}
+
+\input{chapter/chap0.tex}
+
 \input{chapter/chap1.tex}
 % \includepdf[pages=-]{homework/IOE516_HW1_Solutions.pdf}
 
@@ -244,6 +248,10 @@ delim_0 "\\nobreak\\dotfill"
 \input{chapter/chap6.tex}
 
 \input{chapter/chap7.tex}
+
+\input{chapter/chap8.tex}
+
+\input{chapter/chap9.tex}
 % \begin{appendices}
 % \input{./chapter/appendix_formula.tex}
 
