new file:   chapter/chap11.tex 	modified:   notes_template.aux 	modified:   notes_template.fdb_latexmk 	modified:   notes_template.fls 	modified:   notes_template.log 	modified:   notes_template.maf 	modified:   notes_template.mtc12 	modified:   notes_template.out 	modified:   notes_template.pdf 	modified:   notes_template.synctex.gz 	modified:   notes_template.tex 	modified:   notes_template.toc 	new file:   original paper/Krugman-ModelInnovationTechnology-1979.pdf 	new file:   original paper/The RAND J of Economics - 2024 - Bollinger - The timing and location of entry in growing markets  subgame perfection at.pdf

--- a/notes_template.tex
+++ b/notes_template.tex
@@ -252,6 +252,8 @@ delim_0 "\\nobreak\\dotfill"
 \input{chapter/chap8.tex}
 
 \input{chapter/chap9.tex}
+
+\input{chapter/chap10.tex}
 % \begin{appendices}
 % \input{./chapter/appendix_formula.tex}
 
