modified:   chapter/chap-2.tex 	modified:   notes_template.aux 	modified:   notes_template.bbl 	modified:   notes_template.bcf 	modified:   notes_template.fdb_latexmk 	modified:   notes_template.fls 	modified:   notes_template.ilg 	modified:   notes_template.ist 	modified:   notes_template.loe 	modified:   notes_template.log 	modified:   notes_template.maf 	modified:   notes_template.mtc1 	modified:   notes_template.mtc10 	modified:   notes_template.mtc11 	modified:   notes_template.mtc12 	modified:   notes_template.mtc13 	modified:   notes_template.mtc14 	modified:   notes_template.mtc2 	modified:   notes_template.mtc3 	modified:   notes_template.mtc4 	modified:   notes_template.mtc5 	modified:   notes_template.mtc6 	modified:   notes_template.mtc7 	modified:   notes_template.mtc8 	modified:   notes_template.mtc9 	modified:   notes_template.out 	modified:   notes_template.pdf 	modified:   notes_template.synctex.gz 	modified:   notes_template.tex 	modified:   notes_template.toc 	modified:   original paper/Increasing Returns and Economic Geography.pdf

--- a/notes_template.tex
+++ b/notes_template.tex
@@ -229,6 +229,10 @@ delim_0 "\\nobreak\\dotfill"
 % \mainmatter % separat the number of toc and mainmatter
 \part{urban economics}
 
+\input{chapter/chap-3.tex}
+
+\input{chapter/chap-2.tex}
+
 \input{chapter/chap-1.tex}
 
 \input{chapter/chap0.tex}
